src/objects/IRIS_Submission_Country__c.object
<CustomObject>
    <description>Junction object between country and Compliance Submission.</description>
    <fields>
        <fullName>Compliance_Submission__c</fullName>
        <description>Used to store the Compliance Submission object.</description>
        <label>Compliance Submission</label>
        <referenceTo>IRIS_Submission__c</referenceTo>
        <relationshipLabel>Submission Countries</relationshipLabel>
        <relationshipName>Submission_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store reference to the country object.</description>
        <label>Country</label>
        <referenceTo>IRIS_Country__c</referenceTo>
        <relationshipLabel>Submission Countries</relationshipLabel>
        <relationshipName>Submission_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Decision__c</fullName>
        <description>The decision of the Submission</description>
        <formula>Text(Compliance_Submission__r.Decision_Taken__c)</formula>
        <label>Submission Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Name__c</fullName>
        <formula>Compliance_Submission__r.Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Name</label>
        <type>Text</type>
    </fields>
    <label>Submission Country</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Submission Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>